--- a/src/main/resources/assets/testermod/lang/en_us.json
+++ b/src/main/resources/assets/testermod/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "item.testermod.fake_iron": "Fake Iron",
   "item.testermod.invis_iron": "Invisible Iron",
+  "item.testermod.reinforced_iron": "Reinforced Iron",
 
   "creativemodetab.tester_tab": "Tester Items"
 }
