--- a/src/main/resources/assets/testermod/lang/en_us.json
+++ b/src/main/resources/assets/testermod/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.testermod.fake_iron": "Fake Iron",
   "item.testermod.invis_iron": "Invisible Iron",
   "item.testermod.reinforced_iron": "Reinforced Iron",
+  "item.testermod.reinforcer": "Reinforcer",
 
   "block.testermod.reinforced_iron_block": "Reinforced Iron Block",
   "block.testermod.reinforcing_ore": "Reinforcing Ore",
